Fix hyperlink popup position.
When the preview of the link is shown, the position of the popup needs to be re-adjusted.
Or if the link increases the height of the popup, popup's position overlaps with the current cursor position.

Also added borders to arrow div.

--- a/browser/css/cool.css
+++ b/browser/css/cool.css
@@ -1195,9 +1195,11 @@ nav.spreadsheet-color-indicator ~ #sidebar-dock-wrapper {
 	transform: rotate(45deg);
 	display: inline-block;
 	position: relative;
-	top: 25px;
+	top: 27px;
 	left: calc(-50% + 10px);
 	background-color: inherit;
+	border-right: 1px solid var(--color-border-darker);
+	border-bottom: 1px solid var(--color-border-darker);
 }
 
 #hyperlink-pop-up-preview:not(.no-preview) {
